--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.2",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0",
     "styled-components": "^2.0.0"
   },
   "devDependencies": {
